fix: balanced header text wrapping

--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -11,6 +11,8 @@ h6 {
     line-height: var(--docs-heading-line-height);
     margin-top: 0;
     margin-bottom: 0.25rem;
+    text-wrap: balance;
+    text-wrap: pretty;
 }
 
 h1 {
